--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 <div class="host">
     <img id="logo" src="./images/abaaba.png">
     <div style="font-size: 14px">rua豹器</div>
-    <div id="version" style="font-size: 12px">ver. 4.7</div>
+    <div id="version" style="font-size: 12px"><i>ver. 4.7</i></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
