--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,9 @@
     <div style="font-size: 20px; padding-top: 10px; padding-left: 25px">设置</div>
     <div class="host">
         <div class="button-host" id="btn1">
-            <span>开播通知</span>
+            <span class="tooltip">开播通知
+                <span class="tooltiptext tooltiptext-left">开启后会在关注的主播开播后发送通知</span>
+            </span>
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="notification"/>
@@ -26,7 +28,9 @@
             </section>
         </div>
         <div class="button-host" id="btn2">
-            <span>翻牌子</span>
+            <span class="tooltip">翻牌子
+                <span class="tooltiptext tooltiptext-right">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子，DD再也不拍带错牌子啦</span>
+            </span>
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="medal"/>
@@ -35,7 +39,9 @@
             </section>
         </div>
         <div class="button-host" id="btn3">
-            <span>自动签到</span>
+            <span class="tooltip">自动签到
+                <span class="tooltiptext tooltiptext-left">开启后每日自动签到</span>
+            </span>
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="check-in"/>
