popup page layout improved

--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,17 @@
 <div class="host">
     <img id="logo" src="./images/abaaba.png">
     <div style="font-size: 14px">rua豹器</div>
+    <div><span>b站状态: </span>
+        <span class="tooltip" id="login" style="color:#aaa; font-size: 12px; position: relative">加载中
+            <span class="tooltiptext tooltiptext-middle">b站登录状态。插件要在b站登录后才能启用全部功能。</span>
+        </span>
+    </div>
     <div id="version" style="font-size: 12px"><i>ver. 4.7</i></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
     <div style="font-size: 20px; padding-top: 10px; padding-left: 25px">设置</div>
-    <div class="host">
+    <div class="host" style="margin: 15px 35px;">
         <div class="button-host" id="btn1">
             <span class="tooltip">开播通知
                 <span class="tooltiptext tooltiptext-left">开启后会在关注的主播开播后发送通知</span>
