fixed text selected issue when move pupup in content page

--- a/popup.html
+++ b/popup.html
@@ -54,6 +54,32 @@
                 </div>
             </section>
         </div>
+        <div class="drop-down">
+            <div>推流默认画质</div>
+            <div id="drop-down-list">
+                <span>自动</span><img src="images/popup/dropdownarrow.PNG">
+<!--                <option value="-1">自动</option>-->
+<!--                <option value="10000">原画</option>-->
+<!--                <option value="400">蓝光</option>-->
+<!--                <option value="250">超清</option>-->
+<!--                <option value="150">高清</option>-->
+<!--                <option value="80">流畅</option>-->
+            </div>
+            <div id="drop-down-item">
+                <ul>
+                    <li>原画 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
+                    </li>
+                    <li>蓝光 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
+                    </li>
+                    <li>超清 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
+                    </li>
+                    <li>高清 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
+                    </li>
+                    <li>流畅 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <script src="./js/popup.js"></script>
 </div>
