--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
             <span class="tooltiptext tooltiptext-middle">b站登录状态。插件要在b站登录后才能启用全部功能。</span>
         </span>
     </div>
-    <div id="version" style="font-size: 12px"><i>ver. 4.7</i></div>
+    <div id="version" style="font-size: 12px">ver. <i>4.7</i></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
@@ -54,34 +54,15 @@
                 </div>
             </section>
         </div>
-        <div class="drop-down">
-            <div>推流默认画质</div>
-            <div id="drop-down-list">
-                <span>自动</span><img src="images/popup/dropdownarrow.PNG">
-<!--                <option value="-1">自动</option>-->
-<!--                <option value="10000">原画</option>-->
-<!--                <option value="400">蓝光</option>-->
-<!--                <option value="250">超清</option>-->
-<!--                <option value="150">高清</option>-->
-<!--                <option value="80">流畅</option>-->
-            </div>
-            <div id="drop-down-item">
-                <ul>
-                    <li>原画 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
-                    </li>
-                    <li>蓝光 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
-                    </li>
-                    <li>超清 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
-                    </li>
-                    <li>高清 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
-                    </li>
-                    <li>流畅 <svg class="checked" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M421.858 683.366l401.796-448.518c18.66-20.828 50.668-22.586 71.498-3.928 20.828 18.66 22.586 50.67 3.928 71.498L463.638 788.494c-18.606 20.768-50.5 22.586-71.344 4.066L129.004 558.636c-20.906-18.572-22.796-50.576-4.222-71.48 18.574-20.906 50.576-22.796 71.48-4.222L421.86 683.366z" fill="#23ADE5"></path></svg>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
-    <script src="./js/popup.js"></script>
 </div>
+<div class="bottom">
+    <div class="bottom-item"><svg height="16" width="16" viewBox="0 0 16 16" version="1.1">
+        <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z" style="fill: #000"></path>
+    </svg></div>
+    <div id="source" class="bottom-item">Source code</div>
+    <div id="bug-reporter" class="bottom-item">问题反馈</div>
+</div>
+<script src="./js/popup.js"></script>
 </body>
 </html>
