--- a/popup.html
+++ b/popup.html
@@ -15,12 +15,12 @@
             <span class="tooltiptext tooltiptext-middle">b站登录状态。插件要在b站登录后才能启用全部功能。</span>
         </span>
     </div>
-    <div id="version" style="font-size: 12px">ver. <i>4.7</i></div>
+    <div id="version" style="font-size: 12px">ver. <i>4.8</i></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
     <div style="font-size: 20px; padding-top: 10px; padding-left: 25px">设置</div>
-    <div class="host" style="margin: 15px 35px;">
+    <div class="host" style="margin: 15px 25px;">
         <div class="button-host" id="btn1">
             <span class="tooltip">开播通知
                 <span class="tooltiptext tooltiptext-left">开启后会在关注的主播开播后发送通知</span>
@@ -32,13 +32,13 @@
                 </div>
             </section>
         </div>
-        <div class="button-host" id="btn2">
-            <span class="tooltip">翻牌子
-                <span class="tooltiptext tooltiptext-right">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子，DD再也不拍带错牌子啦</span>
+        <div class="button-host" id="btn4">
+            <span class="tooltip">显示封面
+                <span class="tooltiptext tooltiptext-right">开启后会在通知以大图显示封面<br>默认关闭</span>
             </span>
             <section class="button">
                 <div class="checkbox">
-                    <input type="checkbox" id="medal"/>
+                    <input type="checkbox" id="img-notice"/>
                     <label></label>
                 </div>
             </section>
@@ -50,6 +50,17 @@
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="check-in"/>
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn2">
+            <span class="tooltip">翻牌子
+                <span class="tooltiptext tooltiptext-right">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子，DD再也不拍带错牌子啦</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="medal"/>
                     <label></label>
                 </div>
             </section>
