--- a/popup.html
+++ b/popup.html
@@ -56,7 +56,7 @@
         </div>
         <div class="button-host" id="btn2">
             <span class="tooltip">翻牌子
-                <span class="tooltiptext tooltiptext-right">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子，DD再也不拍带错牌子啦</span>
+                <span class="tooltiptext tooltiptext-right">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子。只要牌子戴得对，我就是单推人！</span>
             </span>
             <section class="button">
                 <div class="checkbox">
