--- a/readme.html
+++ b/readme.html
@@ -46,6 +46,7 @@
         <li>添加了使用说明页面。</li>
         <li>修复了点击通知时可能会打开多个窗口的问题。</li>
         <li>改进了通过通知打开直播间时的窗口逻辑。</li>
+        <li>修复了初次进入直播间时牌子显示不正确的问题。</li>
     </ul>
     <h3>ver 4.8</h3>
     <ul>
