add minor improvements

--- a/readme.html
+++ b/readme.html
@@ -10,10 +10,10 @@
     <img src="./images/abaaba.png" width="25%" height="25%"/>
 </p>
 <div style="margin: 35px 75px">
-    <h1>HarukaEmoji 使用说明</h1>
+    <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        浏览器插件4.9来啦 <br>
+        浏览器插件4.10来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -37,10 +37,15 @@
     <h3>移动端</h3>
     <p>下载支持插件的浏览器（如kiwi）并在浏览器安装即可。（暂不支持iOS）</p>
     <h2>下载：</h2>
-    <a href="https://chrome.google.com/webstore/detail/rua%E8%B1%B9%E5%99%A8/igapngheaefbfhikpbngjgakfnedkchb">chrome插件商店</a>
+    <a href="https://chrome.google.com/webstore/detail/rua%E8%B1%B9%E5%99%A8/igapngheaefbfhikpbngjgakfnedkchb">chrome插件商店</a><br/>
+    <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
-    <a href="https://t.bilibili.com/561690948190181609">bilibili</a>, 不过都来这儿了上面那个链接应该就够了吧<img src="./images/haruka/5835.webp" width="30" height="30"/>。
     <h2>版本记录</h2>
+    <h3>ver 4.10</h3>
+    <ul>
+        <li>添加了直播间悬窗的初始位置。</li>
+        <li>修复了在某些直播间换牌子失效的问题。</li>
+    </ul>
     <h3>ver 4.9</h3>
     <ul>
         <li>添加了使用说明页面。</li>
