--- a/readme.html
+++ b/readme.html
@@ -26,14 +26,23 @@
     </ul>
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
-    <h3>自定义设置</h3>
-    <p>单击地址栏右侧插件图标即可打开设置。 目前可以设置的有：</p>
-    <ul>
-        <li>开关通知</li>
-        <li>通知模式（大图/普通）</li>
-        <li>开关自动签到</li>
-        <li>开关自动切换粉丝勋章</li>
-    </ul>
+    <div>
+        <h3>自定义设置</h3>
+        <img src="images/popup/setting.PNG" width="30%" height="30%">
+        <p>单击地址栏右侧插件图标即可打开设置。 目前可以设置的有：</p>
+        <ul>
+            <li>开关通知</li>
+            <li>通知模式（大图/普通）</li>
+            <li>开关自动签到</li>
+            <li>开关自动切换粉丝勋章</li>
+        </ul>
+    </div>
+    <div>
+        <h3>直播间内悬浮球</h3>
+        <img src="images/popup/pop.PNG" width="50%" height="50%">
+        <p>默认会出现在这个位置，你也可以把它拖拽到你喜欢的位置。</p>
+    </div>
+
     <h3>移动端</h3>
     <p>下载支持插件的浏览器（如kiwi）并在浏览器安装即可。（暂不支持iOS）</p>
     <h2>下载：</h2>
@@ -43,8 +52,10 @@
     <h2>版本记录</h2>
     <h3>ver 4.10</h3>
     <ul>
-        <li>添加了直播间悬窗的初始位置。</li>
+        <li>添加了直播间悬窗的初始位置和位置记忆功能。</li>
         <li>修复了在某些直播间换牌子失效的问题。</li>
+        <li>修复了某些情况下自动签到失效的问题。</li>
+        <li>添加了对深色模式的支持</li>
     </ul>
     <h3>ver 4.9</h3>
     <ul>
