--- a/readme.html
+++ b/readme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>readme</title>
+    <title>rua豹器 使用说明</title>
     <link href="./css/readme.css" type="text/css" rel="stylesheet">
 </head>
 <body style="font-size: 100%;">
