add B coin query and exchange API

--- a/readme.html
+++ b/readme.html
@@ -28,7 +28,7 @@
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
     <div>
         <h3>自定义设置</h3>
-        <img src="images/popup/setting.PNG" width="30%" height="30%">
+        <img src="./images/popup/setting.PNG" width="30%" height="30%">
         <p>单击地址栏右侧插件图标即可打开设置。 目前可以设置的有：</p>
         <ul>
             <li>开关通知</li>
@@ -39,7 +39,7 @@
     </div>
     <div>
         <h3>直播间内悬浮球</h3>
-        <img src="images/popup/pop.PNG" width="50%" height="50%">
+        <img src="./images/popup/pop.PNG" width="50%" height="50%">
         <p>默认会出现在这个位置，你也可以把它拖拽到你喜欢的位置。</p>
     </div>
 
