--- a/popup.html
+++ b/popup.html
@@ -15,19 +15,20 @@
             <span class="tooltiptext tooltiptext-middle">b站登录状态。插件要在b站登录后才能启用全部功能。</span>
         </span>
     </div>
-    <div id="version" style="font-size: 12px">ver. <i>4.10</i></div>
+    <div id="version" style="font-size: 12px">ver. <i>4.11</i></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
-    <div style="font-size: 20px; padding-top: 10px; padding-left: 25px">设置</div>
-    <div class="host" style="margin: 15px 25px;">
+    <div style="font-size: 20px; padding-top: 10px; padding-left: 15px">设置</div>
+    <div style="font-size: 16px; padding-top: 10px; padding-left: 25px">直播相关</div>
+    <div class="host" style="margin: 0px 25px;height: 80px;">
         <div class="button-host" id="btn1">
             <span class="tooltip">开播通知
                 <span class="tooltiptext tooltiptext-left">开启后会在关注的主播开播后发送通知</span>
             </span>
             <section class="button">
                 <div class="checkbox">
-                    <input type="checkbox" id="notification"/>
+                    <input type="checkbox" id="notification">
                     <label></label>
                 </div>
             </section>
@@ -38,29 +39,43 @@
             </span>
             <section class="button">
                 <div class="checkbox">
-                    <input type="checkbox" id="img-notice"/>
-                    <label></label>
-                </div>
-            </section>
-        </div>
-        <div class="button-host" id="btn3">
-            <span class="tooltip">自动签到
-                <span class="tooltiptext tooltiptext-left">开启后每日自动签到</span>
-            </span>
-            <section class="button">
-                <div class="checkbox">
-                    <input type="checkbox" id="check-in"/>
+                    <input type="checkbox" id="img-notice">
                     <label></label>
                 </div>
             </section>
         </div>
         <div class="button-host" id="btn2">
             <span class="tooltip">翻牌子
-                <span class="tooltiptext tooltiptext-right">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子。只要牌子戴得对，我就是单推人！</span>
+                <span class="tooltiptext tooltiptext-left">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子。只要牌子戴得对，我就是单推人！</span>
             </span>
             <section class="button">
                 <div class="checkbox">
-                    <input type="checkbox" id="medal"/>
+                    <input type="checkbox" id="medal">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+    </div>
+    <div style="font-size: 16px; padding-top: 10px; padding-left: 25px">其他设置</div>
+    <div class="host" style="margin: 0px 25px;height: 80px;">
+        <div class="button-host" id="btn3">
+            <span class="tooltip">自动签到
+                <span class="tooltiptext tooltiptext-left">开启后每日自动签到</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="check-in">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn5">
+            <span class="tooltip">B币兑换
+                <span class="tooltiptext tooltiptext-right">自动兑换大会员的每月5B币</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="b-coin">
                     <label></label>
                 </div>
             </section>
