--- a/readme.html
+++ b/readme.html
@@ -50,6 +50,11 @@
     <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 4.11</h3>
+    <ul>
+        <li>添加了默认画质的设置。</li>
+        <li>修复了一些微小的问题。</li>
+    </ul>
     <h3>ver 4.10</h3>
     <ul>
         <li>添加了直播间悬窗的初始位置和位置记忆功能。</li>
