add quality features

--- a/popup.html
+++ b/popup.html
@@ -80,11 +80,11 @@
         <div class="button-host" id="btn7">
             <div style="height: 11px; width: 100px"></div>
             <div id="qn-items" style="margin-top: 0">
-                <div class="qn-i">原画</div>
-                <div class="qn-i">蓝光</div>
-                <div class="qn-i">超清</div>
-                <div class="qn-i">高清</div>
-                <div class="qn-i">流畅</div>
+                <div class="qn-i" style="transform: rotateX(0deg);">原画</div>
+                <div class="qn-i" style="transform: rotateX(50deg);">蓝光</div>
+                <div class="qn-i" style="transform: rotateX(100deg);">超清</div>
+                <div class="qn-i" style="transform: rotateX(150deg);">高清</div>
+                <div class="qn-i" style="transform: rotateX(200deg);">流畅</div>
             </div>
             <div style="margin-left:75px; position: absolute; font-size: 15px; height: 20px; line-height: 20px; color: #fd749b"><b>—</b></div>
             <div style="margin-left:10px; position: absolute; font-size: 15px; height: 20px; line-height: 20px; color: #fd749b"><b>—</b></div>
