--- a/popup.html
+++ b/popup.html
@@ -78,23 +78,23 @@
             </section>
         </div>
         <div class="button-host" id="btn7">
-            <div style="height: 11px; width: 100px"></div>
+            <div style="height: 13px; width: 100px"></div>
             <div id="qn-items" style="margin-top: 0">
                 <div class="qn-i" style="transform: rotateX(0deg);">原画</div>
-                <div class="qn-i" style="transform: rotateX(50deg);">蓝光</div>
-                <div class="qn-i" style="transform: rotateX(100deg);">超清</div>
-                <div class="qn-i" style="transform: rotateX(150deg);">高清</div>
-                <div class="qn-i" style="transform: rotateX(200deg);">流畅</div>
+                <div class="qn-i" style="transform: rotateX(45deg);">蓝光</div>
+                <div class="qn-i" style="transform: rotateX(90deg);">超清</div>
+                <div class="qn-i" style="transform: rotateX(135deg);">高清</div>
+                <div class="qn-i" style="transform: rotateX(180deg);">流畅</div>
             </div>
-            <div style="margin-left:75px; position: absolute; font-size: 15px; height: 20px; line-height: 20px; color: #fd749b"><b>—</b></div>
-            <div style="margin-left:10px; position: absolute; font-size: 15px; height: 20px; line-height: 20px; color: #fd749b"><b>—</b></div>
+            <span style="margin-left:75px"><b>—</b></span>
+            <span style="margin-left:10px"><b>—</b></span>
         </div>
     </div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px">其他设置</div>
     <div class="host" style="margin: 0px 25px;height: 80px;">
         <div class="button-host" id="btn5">
             <span class="tooltip">B币兑换
-                <span class="tooltiptext tooltiptext-right">自动兑换大会员的每月5B币</span>
+                <span class="tooltiptext tooltiptext-left">自动兑换大会员的每月5B币</span>
             </span>
             <section class="button">
                 <div class="checkbox">
