--- a/readme.html
+++ b/readme.html
@@ -23,6 +23,7 @@
         <li>直播牌子自动切换。</li>
         <li>自动签到。</li>
         <li>弹幕姬表情选取发送框（目前仅支持八儿力老师的直播间）。</li>
+        <li>默认直播画质</li>
     </ul>
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
@@ -35,6 +36,7 @@
             <li>通知模式（大图/普通）</li>
             <li>开关自动签到</li>
             <li>开关自动切换粉丝勋章</li>
+            <li>默认直播画质</li>
         </ul>
     </div>
     <div>
