--- a/readme.html
+++ b/readme.html
@@ -23,7 +23,8 @@
         <li>直播牌子自动切换。</li>
         <li>自动签到。</li>
         <li>弹幕姬表情选取发送框（目前仅支持八儿力老师的直播间）。</li>
-        <li>默认直播画质</li>
+        <li>默认直播画质。</li>
+        <li>大会员B币兑换。</li>
     </ul>
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
@@ -55,6 +56,7 @@
     <h3>ver 4.11</h3>
     <ul>
         <li>添加了默认画质的设置。</li>
+        <li>添加了大会员B币兑换。</li>
         <li>修复了一些微小的问题。</li>
     </ul>
     <h3>ver 4.10</h3>
