--- a/readme.html
+++ b/readme.html
@@ -13,7 +13,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        浏览器插件4.11来啦 <br>
+        浏览器插件4.12来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -53,6 +53,12 @@
     <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 4.12</h3>
+    <ul>
+        <li>修复了关闭浏览器再启动后无法立即签到的问题。</li>
+        <li>更改了天选之人抽奖的逻辑。现在点击参与后天选窗口会自动关闭，开奖时若没有中奖则不再会弹窗。注：此功能不会影响正常参与天选。</li>
+        <li>修复了一些微小的问题。</li>
+    </ul>
     <h3>ver 4.11</h3>
     <ul>
         <li>添加了默认画质的设置。</li>
