--- a/popup.html
+++ b/popup.html
@@ -90,7 +90,7 @@
             <span style="margin-left:10px"><b>—</b></span>
         </div>
     </div>
-    <div style="font-size: 16px; padding-top: 10px; padding-left: 25px">其他设置</div>
+    <div style="font-size: 16px; padding-top: 10px; padding-left: 25px">主站相关</div>
     <div class="host" style="margin: 0px 25px;height: 80px;">
         <div class="button-host" id="btn5">
             <span class="tooltip">B币兑换
@@ -99,6 +99,17 @@
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="b-coin">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn8">
+            <span class="tooltip">视频更新
+                <span class="tooltiptext tooltiptext-right">开启后在关注的up主发布新视频是推送通知。</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="dynamicPush">
                     <label></label>
                 </div>
             </section>
