--- a/readme.html
+++ b/readme.html
@@ -56,6 +56,7 @@
     <h3>ver 4.12</h3>
     <ul>
         <li>添加了视频更新的推送通知。</li>
+        <li>添加了直播间无侧边栏网页全屏的选项。</li>
         <li>修复了关闭浏览器再启动后无法立即签到的问题。</li>
         <li>更改了天选之人抽奖的逻辑。现在点击参与后天选窗口会自动关闭，开奖时若没有中奖则不再会弹窗。注：此功能不会影响正常参与天选。</li>
         <li>修复了一些微小的问题。</li>
