--- a/readme.html
+++ b/readme.html
@@ -19,7 +19,9 @@
     </p>
     <h2>已有的功能</h2>
     <ul>
+        <li>视频投稿推送通知。</li>
         <li>直播间开播推送通知。</li>
+        <li>直播间无侧边栏网页全屏。</li>
         <li>直播牌子自动切换。</li>
         <li>自动签到。</li>
         <li>弹幕姬表情选取发送框（目前仅支持八儿力老师的直播间）。</li>
