--- a/readme.html
+++ b/readme.html
@@ -13,7 +13,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        浏览器插件4.12来啦 <br>
+        浏览器插件4.13来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -55,6 +55,11 @@
     <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 4.13</h3>
+    <ul>
+        <li>修复了一系列问题。</li>
+        <li>移除了直播间无侧边栏网页全屏的选项。(因为我是猪陛...)</li>
+    </ul>
     <h3>ver 4.12</h3>
     <ul>
         <li>添加了视频更新的推送通知。</li>
