--- a/popup.html
+++ b/popup.html
@@ -15,13 +15,13 @@
             <span class="tooltiptext tooltiptext-middle">b站登录状态。插件要在b站登录后才能启用全部功能。</span>
         </span>
     </div>
-    <div id="version" style="font-size: 12px">ver. <i>4.13</i></div>
+    <div id="version" style="font-size: 12px">ver. <i>4.14</i></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
     <div style="font-size: 20px; padding-top: 10px; padding-left: 15px">设置</div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px">直播相关</div>
-    <div class="host" style="margin: 0px 25px;height: 120px;">
+    <div class="host" style="margin: 0 25px;height: 160px;">
         <div class="button-host" id="btn1">
             <span class="tooltip">开播通知
                 <span class="tooltiptext tooltiptext-left">开启后会在关注的主播开播后发送通知</span>
@@ -88,6 +88,17 @@
             </div>
             <span style="margin-left:75px"><b>—</b></span>
             <span style="margin-left:10px"><b>—</b></span>
+        </div>
+        <div class="button-host" id="HiddenEntryBtn">
+            <span class="tooltip">隐身进入
+                <span class="tooltiptext tooltiptext-left">隐身进入直播间</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="HiddenEntry">
+                    <label></label>
+                </div>
+            </section>
         </div>
     </div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px">主站相关</div>
