--- a/readme.html
+++ b/readme.html
@@ -30,7 +30,8 @@
         <li>默认直播画质。</li>
         <li>大会员B币兑换。</li>
         <li>隐身进入直播间的功能。</li>
-        <li>右键关联菜单搜索。识别到AV/BV号时会自动跳转到视频页面，其余的会跳转到b站搜索结果</li>
+        <li>右键关联菜单搜索。识别到AV/BV号时会自动跳转到视频页面，其余的会跳转到b站搜索结果。</li>
+        <li>自动打卡有牌子的直播间。</li>
     </ul>
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
@@ -65,6 +66,7 @@
     <ul>
         <li>添加了隐身进入直播间的功能。</li>
         <li>添加了右键关联菜单搜索。</li>
+        <li>添加了自动打卡有牌子的直播间。</li>
     </ul>
     <h3>ver 4.13</h3>
     <ul>
