--- a/popup.html
+++ b/popup.html
@@ -55,16 +55,16 @@
                 </div>
             </section>
         </div>
-        <div class="button-host" id="btn3">
-            <span class="tooltip">自动签到
-                <span class="tooltiptext tooltiptext-right">开启后每日自动签到</span>
+        <div class="button-host" id="HiddenEntryBtn">
+            <span class="tooltip">隐身进入
+                <span class="tooltiptext tooltiptext-right">隐身进入直播间</span>
             </span>
-        <section class="button">
-            <div class="checkbox">
-                <input type="checkbox" id="check-in">
-                <label></label>
-            </div>
-        </section>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="HiddenEntry">
+                    <label></label>
+                </div>
+            </section>
         </div>
         <div class="button-host" id="btn6">
             <span class="tooltip">默认画质
@@ -89,13 +89,24 @@
             <span style="margin-left:75px"><b>—</b></span>
             <span style="margin-left:10px"><b>—</b></span>
         </div>
-        <div class="button-host" id="HiddenEntryBtn">
-            <span class="tooltip">隐身进入
-                <span class="tooltiptext tooltiptext-left">隐身进入直播间</span>
+        <div class="button-host" id="btn3">
+            <span class="tooltip">自动签到
+                <span class="tooltiptext tooltiptext-left">开启后每日自动签到</span>
             </span>
             <section class="button">
                 <div class="checkbox">
-                    <input type="checkbox" id="HiddenEntry">
+                    <input type="checkbox" id="check-in">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="daka">
+            <span class="tooltip">自动打卡
+                <span class="tooltiptext tooltiptext-right">开启后每日自动在直播间打卡</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="daka-switch">
                     <label></label>
                 </div>
             </section>
