fixed some issues

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
             <span class="tooltiptext tooltiptext-middle">b站登录状态。插件要在b站登录后才能启用全部功能。</span>
         </span>
     </div>
-    <div id="version" style="font-size: 12px">ver. <i>4.15</i></div>
+    <div id="version" style="font-size: 12px">ver. <i>4.14.3</i></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
@@ -146,6 +146,7 @@
     <div id="bug-reporter" class="bottom-item">问题反馈</div>
     <div id="readme" class="bottom-item">使用说明</div>
 </div>
-<script src="./js/popup.min.js"></script>
+<script src="./js/Jquery-3.5.1.js"></script>
+<script src="./js/popup.js"></script>
 </body>
 </html>
