add version check method

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,8 @@
             <span class="tooltiptext tooltiptext-middle">b站登录状态。插件要在b站登录后才能启用全部功能。</span>
         </span>
     </div>
-    <div id="version" style="font-size: 12px">ver. <i>4.14.3</i></div>
+    <div id="version" style="font-size: 12px"></div>
+    <div id="update" style="color: #00A0FF; display: none; cursor: pointer"></div>
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
