--- a/popup.html
+++ b/popup.html
@@ -148,6 +148,6 @@
     <div id="readme" class="bottom-item">使用说明</div>
 </div>
 <script src="./js/Jquery-3.5.1.js"></script>
-<script src="./js/popup.js"></script>
+<script src="./js/popup.min.js"></script>
 </body>
 </html>
