improve update check feature

--- a/readme.html
+++ b/readme.html
@@ -64,7 +64,10 @@
     <h2>版本记录</h2>
     <h3>ver 4.14.3</h3>
     <ul>
+        <li>将Haruna对高分辨率屏幕做了支持。</li>
+        <li>添加了检测更新版本功能。</li>
         <li>优化了推送的图像及稳定性。</li>
+        <li>修复了一些问题。</li>
     </ul>
     <h3>ver 4.14.2</h3>
     <ul>
