--- a/readme.html
+++ b/readme.html
@@ -16,7 +16,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        浏览器插件4.14来啦 <br>
+        浏览器插件4.15来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -62,6 +62,12 @@
     <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 4.15</h3>
+    <ul>
+        <li>添加了视频页面下的下载功能。</li>
+        <li>优化了直播间深色模式的支持。</li>
+        <li>修复了一些问题。</li>
+    </ul>
     <h3>ver 4.14.3</h3>
     <ul>
         <li>将Haruna对高分辨率屏幕做了支持。</li>
