add video download features

--- a/readme.html
+++ b/readme.html
@@ -32,6 +32,9 @@
         <li>隐身进入直播间的功能。</li>
         <li>右键关联菜单搜索。识别到AV/BV号时会自动跳转到视频页面，其余的会跳转到b站搜索结果。</li>
         <li>自动打卡有牌子的直播间。</li>
+        <li>主站视频下载，支持单音轨下载<br>
+            注：音轨音质保存是会选择视频提供的最佳音频；默认格式为mp3，如果不能播放请手动将后缀改为mp4。
+        </li>
     </ul>
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
@@ -64,7 +67,7 @@
     <h2>版本记录</h2>
     <h3>ver 4.15</h3>
     <ul>
-        <li>添加了视频页面下的下载功能。</li>
+        <li>添加了视频页面下的视频/音轨下载功能。</li>
         <li>优化了直播间深色模式的支持。</li>
         <li>修复了一些问题。</li>
     </ul>
