added wav format for sound file.

--- a/popup.html
+++ b/popup.html
@@ -137,6 +137,17 @@
                 </div>
             </section>
         </div>
+        <div class="button-host" id="wavBtn">
+            <span class="tooltip">音频转码
+                <span class="tooltiptext tooltiptext-left tooltiptext-top">将音频文件转为wav格式保存，提升了兼容性，但是文件较大。开启后文件会先缓存在内存中，因此在下载时间较长的音频时不建议开启。</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="wav">
+                    <label></label>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 <div class="bottom">
