--- a/readme.html
+++ b/readme.html
@@ -16,7 +16,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.0来啦 <br>
+        rua豹器5.1.0来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -33,7 +33,9 @@
         <li>右键关联菜单搜索。识别到AV/BV号时会自动跳转到视频页面，其余的会跳转到b站搜索结果。</li>
         <li>自动打卡有牌子的直播间。</li>
         <li>主站视频下载，支持单音轨下载<br>
-            注：音轨音质保存是会选择视频提供的最佳音频；默认格式为mp3，如果不能播放请手动将后缀改为mp4。
+            注：音轨音质保存是会选择视频提供的最佳音频；默认格式为mp3，如果不能播放请手动将后缀改为mp4。<br>
+            现在支持了在线转码为wav格式，提升了兼容性，可以在扩展设置中启用。但是wav文件较大且开启后文件会先缓存在内存中，因此在下载时间较长的音频时不建议开启。<br>
+            1个小时以上时长的音频不会被保存为wav格式。
         </li>
     </ul>
     <h2>怎么用</h2>
@@ -65,6 +67,11 @@
     <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.1</h3>
+    <ul>
+        <li>添加了音频的wav转码功能。</li>
+        <li>修复了一些问题。</li>
+    </ul>
     <h3>ver 5.0</h3>
     <ul>
         <li>添加了视频页面的视频/音轨下载功能。</li>
@@ -148,10 +155,6 @@
     <ul>
         <li>添加了新的表情包。</li>
         <li>修正了在活动页面不能正常显示的问题。</li>
-    </ul>
-    <h3>ver 4.2</h3>
-    <ul>
-        <li>添加了全屏下的显示功能。 </li>
     </ul>
 </div>
 <div class="bottom">
