--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>rua豹器 使用说明</title>
-    <link href="./css/readme.css" type="text/css" rel="stylesheet">
+    <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
 </head>
 <body style="font-size: 100%;">
 <div align="center">
@@ -70,6 +70,7 @@
     <h3>ver 5.1</h3>
     <ul>
         <li>添加了音频的wav转码功能。</li>
+        <li>添加了弹幕内容查询功能。</li>
         <li>修复了一些问题。</li>
     </ul>
     <h3>ver 5.0</h3>
