--- a/readme.html
+++ b/readme.html
@@ -16,7 +16,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.1.0来啦 <br>
+        rua豹器5.2.0来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -37,6 +37,7 @@
             现在支持了在线转码为wav格式，提升了兼容性，可以在扩展设置中启用。但是wav文件较大且开启后文件会先缓存在内存中，因此在下载时间较长的音频时不建议开启。<br>
             1个小时以上时长的音频不会被保存为wav格式。
         </li>
+        <li>快速录制直播片段 (beta)<br>支持录制重放，默认保留开始录制前5分钟片段，可在设置中设置重放时长</li>
     </ul>
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
@@ -67,6 +68,11 @@
     <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.2</h3>
+    <ul>
+        <li>添加了快速录制直播片段。</li>
+        <li>修复了一些问题。</li>
+    </ul>
     <h3>ver 5.1</h3>
     <ul>
         <li>添加了音频的wav转码功能。</li>
